clippy.log
    Checking omg v0.1.10 (/home/pyro1121/Documents/code/filemanager/omg)
error[E0308]: mismatched types
   --> src/package_managers/pacman_db.rs:436:39
    |
436 |     let packages = load_sync_packages(sync_dir)?;
    |                    ------------------ ^^^^^^^^ expected `&Path`, found `PathBuf`
    |                    |
    |                    arguments to this function are incorrect
    |
note: function defined here
   --> src/package_managers/pacman_db.rs:37:4
    |
 37 | fn load_sync_packages(sync_dir: &Path) -> Result<HashMap<String, SyncDbPackage>> {
    |    ^^^^^^^^^^^^^^^^^^ ---------------
help: consider borrowing here
    |
436 |     let packages = load_sync_packages(&sync_dir)?;
    |                                       +

For more information about this error, try `rustc --explain E0308`.
error: could not compile `omg` (lib) due to 1 previous error
